---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/already_flat.hvm
---
(Rule1) = λx x

(Rule2) = λ%arg0 λx x

(Rule3) = λ%arg0 λ%arg1 λ%arg2 λ%arg3 (%arg0 %arg1 %arg2 %arg3)

(Rule4) = λ%arg0 match %arg0 { CtrA: λx x; CtrB: %arg0.x }

(Rule5) = λ%arg0 λ%arg1 (match %arg0 { CtrA1: λ%arg1 (%arg0.a %arg1); CtrA2: λ%arg1 (%arg0.a1 %arg0.a2 %arg1); CtrA3: λ%arg1 (match %arg1 { CtrB0: λ%arg0.a (CtrA3 %arg0.a); CtrB1: λ%arg0.a (CtrA3 %arg0.a %arg1.b); CtrB2: λ%arg0.a (CtrA3 %arg0.a (CtrB2 %arg1.b)); CtrB3: λ%arg0.a (%arg0.a %arg1.b) } %arg0.a) } %arg1)

(Rule6) = λ%arg0 %arg0

(CtrB3) = λb #Baz λCtrB0 #Baz λCtrB1 #Baz λCtrB2 #Baz λCtrB3 #Baz (CtrB3 b)

(CtrB2) = λb #Baz λCtrB0 #Baz λCtrB1 #Baz λCtrB2 #Baz λCtrB3 #Baz (CtrB2 b)

(CtrB1) = λb #Baz λCtrB0 #Baz λCtrB1 #Baz λCtrB2 #Baz λCtrB3 #Baz (CtrB1 b)

(CtrB0) = #Baz λCtrB0 #Baz λCtrB1 #Baz λCtrB2 #Baz λCtrB3 CtrB0

(CtrA) = #Foo λCtrA #Foo λCtrB CtrA

(CtrB) = λx #Foo λCtrA #Foo λCtrB #Foo (CtrB x)

(CtrA1) = λa #Bar λCtrA1 #Bar λCtrA2 #Bar λCtrA3 #Bar (CtrA1 a)

(CtrA2) = λa1 λa2 #Bar λCtrA1 #Bar λCtrA2 #Bar λCtrA3 #Bar (CtrA2 a1 a2)

(CtrA3) = λa #Bar λCtrA1 #Bar λCtrA2 #Bar λCtrA3 #Bar (CtrA3 a)
